--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
 
     <div class="row header-top">
 
-      <div class="col-md-auto col-lg-auto col-xl-auto">
+      <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto">
         <a href="index.html">
           <img src="img/header-logo.svg" alt="Логотип Ставстрой" title="Логотип Ставстрой" width="199" height="39">
         </a>
       </div>
 
-      <div class="col-md-auto col-lg-auto col-xl-auto schedule-wrapper">
+      <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto schedule-wrapper">
         <div class="schedule">
           <span>08:30 - 17:30</span>
           <span>понедельник - пятница</span>
         </div>
       </div>
 
-      <div class="col-md-auto col-lg-auto col-xl-auto address-wrapper">
+      <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto address-wrapper">
         <address class="address">
           <span>г. Ставрополь</span>
           <span>ул. Индустриальная, 46 А</span>
         </address>
       </div>
 
-      <div class="col-md-auto col-lg-auto col-xl-auto contacts-wrapper">
+      <div class="col-sm-auto col-md-auto col-lg-auto col-xl-auto contacts-wrapper">
         <div class="contacts">
           <span>+7 8652 21 32 69</span>
           <span>горячаяя линия</span>
@@ -90,17 +90,17 @@
   <div class="container why-us">
     <h2>Почему мы?</h2>
     <div class="row why-us-features">
-      <div class="col-md-6 col-lg-4 col-xl-4 why-us-features-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 why-us-features-item">
         <img src="img/one-icon.svg" alt="Первое преимущество">
         <h3>Надежная компания!</h3>
         <p>Работаем с 2003 года! За все время остеклили более чем 127.000 квартир и офисных помещений!</p>
       </div>
-      <div class="col-md-6  col-lg-4 col-xl-4 why-us-features-item">
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 why-us-features-item">
         <img src="img/two-icon.svg" alt="Второе преимущество">
         <h3>Не посредники!</h3>
         <p>Имеем собственное производство! Осуществляем продажу без диллеров и всяких накруток!</p>
       </div>
-      <div class="col-md-6  col-lg-4 col-xl-4 why-us-features-item">
+      <div class="col-sm-12 col-md-6  col-lg-4 col-xl-4 why-us-features-item">
         <img src="img/three-icon.svg" alt="Третье преимущество">
         <h3>Экономите 30%</h3>
         <p>Мы единственная компания в Ставрополе, которая предлагает низкие цены на окна!</p>
@@ -271,31 +271,31 @@
   <div class="container another-production">
     <h2>ДРУГАЯ ПРОДУКЦИЯ</h2>
     <div class="row">
-      <div class="col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/garage-doors-image.jpg" alt="">
           <span>Гаражные ворота</span>
         </div>
       </div>
-      <div class="col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/shutters-image.jpg" alt="">
           <span>Ролставни</span>
         </div>
       </div>
-      <div class="col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/mosquito-net-image.jpg" alt="">
           <span>Москитные сетки</span>
         </div>
       </div>
-      <div class="col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/handle-opening-limiter-image.jpg" alt="">
           <span>Ограничитель открывания ручки</span>
         </div>
       </div>
-      <div class="col-md-6 col-lg-6 col-xl-4">
+      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
         <div class="another-production-item">
           <img src="img/handle-with-lock-image.jpg" alt="">
           <span>Ручка с замком </span>
@@ -364,12 +364,12 @@
   <div class="container-fluid footer-background">
     <div class="container footer">
       <div class="row footer-items">
-        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
+        <div class="col-sm-auto col-md-auto col-lg-3 col-xl-auto footer-item">
           <a href="index.html">
             <img src="img/footer-logo.svg" alt="Логотип Ставстрой">
           </a>
         </div>
-        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
+        <div class="col-sm-auto col-md-auto col-lg-3 col-xl-auto footer-item">
           <ul>
             <li>
               <a href="index.html">Главная</a>
@@ -391,7 +391,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
+        <div class="col-sm-auto col-md-auto col-lg-3 col-xl-auto footer-item">
           <ul>
             <li>
               <a href="#">Гаражные ворота</a>
@@ -411,7 +411,7 @@
           </ul>
         </div>
 
-        <div class="col-md-auto col-lg-3 col-xl-auto footer-item">
+        <div class="col-sm-auto col-md-auto col-lg-3 col-xl-auto footer-item">
 
           <div class="footer-schedule">
             <span>08:30 - 17:30</span>
