--- a/index.html
+++ b/index.html
@@ -137,17 +137,20 @@
       <h2>Почему мы?</h2>
       <div class="row why-us-features">
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 why-us-features-item">
-          <img src="img/one-icon.svg" alt="Первое преимущество">
+          <!-- <img src="img/one-icon.svg" alt="Первое преимущество"> -->
+          <div class="circle">1</div>
           <h3>Надежная компания!</h3>
           <p>Работаем с 2003 года! За все время остеклили более чем 127.000 квартир и офисных помещений!</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 why-us-features-item">
-          <img src="img/two-icon.svg" alt="Второе преимущество">
+          <!-- <img src="img/two-icon.svg" alt="Второе преимущество"> -->
+          <div class="circle">2</div>
           <h3>Не посредники!</h3>
           <p>Имеем собственное производство! Осуществляем продажу без диллеров и всяких накруток!</p>
         </div>
         <div class="col-sm-12 col-md-6  col-lg-4 col-xl-4 why-us-features-item">
-          <img src="img/three-icon.svg" alt="Третье преимущество">
+          <!-- <img src="img/three-icon.svg" alt="Третье преимущество"> -->
+          <div class="circle">3</div>
           <h3>Экономите 30%</h3>
           <p>Мы единственная компания в Ставрополе, которая предлагает низкие цены на окна!</p>
         </div>
